force-app/main/default/objects/AccountCredentials__mdt/AccountCredentials__mdt.object-meta.xml
<CustomObject>
    <label>AccountCredential</label>
    <pluralLabel>AccountCredentials</pluralLabel>
</CustomObject>