force-app/main/default/objects/AccountCredentials__mdt/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>clientId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>