force-app/main/default/objects/AccountCredentials__mdt/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>clientSecret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>