force-app/main/default/objects/AccountCredentials__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>